<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.automationexercise</groupId>
    <artifactId>automation-exercise-framework</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>Automation Exercise Selenium TestNG Framework</name>
    <description>Portfolio QA Automation Framework for automationexercise.com</description>

    <properties>
        <!-- Java version -->
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Dependency versions (verified: July 2026) -->
        <selenium.version>4.45.0</selenium.version>
        <testng.version>7.10.2</testng.version>
        <allure.version>2.35.3</allure.version>
        <jackson.version>2.18.2</jackson.version>
        <log4j.version>2.24.3</log4j.version>
        <slf4j.version>2.0.16</slf4j.version>
        <aspectj.version>1.9.22.1</aspectj.version>

        <!-- Plugin versions -->
        <maven-compiler.version>3.13.0</maven-compiler.version>
        <maven-surefire.version>3.5.2</maven-surefire.version>
        <allure-maven.version>2.13.0</allure-maven.version>

        <!-- Default suite file – can be overridden via CLI:
             mvn clean test -DsuiteXmlFile=src/test/resources/suites/regression.xml -->
        <suiteXmlFile>src/test/resources/suites/smoke.xml</suiteXmlFile>
    </properties>

    <!-- Allure BOM: ensures all Allure modules use the same version -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-bom</artifactId>
                <version>${allure.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- ============================================================
             SELENIUM WEBDRIVER
             Core library for browser automation
             ============================================================ -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>

        <!-- ============================================================
             TESTNG
             Test framework for organizing and running tests
             ============================================================ -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
        </dependency>

        <!-- ============================================================
             ALLURE TESTNG
             Rich HTML reporting for TestNG tests
             Version managed by allure-bom above
             ============================================================ -->
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- ============================================================
             JACKSON
             Deserializes JSON test data files into Java model classes
             ============================================================ -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!-- ============================================================
             LOGGING: SLF4J + Log4j2
             SLF4J is the API (facade), Log4j2 is the implementation
             ============================================================ -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- ============================================================
                 MAVEN COMPILER
                 Compiles Java 21 source code
                 ============================================================ -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler.version}</version>
                <configuration>
                    <!-- Use 'release' instead of 'source/target' to properly set JDK module location -->
                    <release>${java.version}</release>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <!-- ============================================================
                 MAVEN SUREFIRE
                 Runs TestNG tests; integrates with Allure via aspectjweaver
                 ============================================================ -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire.version}</version>
                <configuration>
                    <!-- Suite file: override with -DsuiteXmlFile=... -->
                    <suiteXmlFiles>
                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                    </suiteXmlFiles>
                    <!-- AspectJ weaver required for Allure step tracking -->
                    <argLine>
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                    <systemPropertyVariables>
                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                    </systemPropertyVariables>
                    <!-- Preserve test output even if tests fail -->
                    <testFailureIgnore>false</testFailureIgnore>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

            <!-- ============================================================
                 ALLURE MAVEN
                 Generates Allure HTML report from allure-results:
                 mvn allure:report    → generates report
                 mvn allure:serve     → generates + opens in browser
                 ============================================================ -->
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure-maven.version}</version>
                <configuration>
                    <reportVersion>2.24.1</reportVersion>
                    <resultsDirectory>${project.build.directory}/allure-results</resultsDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
